--- a/DSAA/presentation/img/matrix_decomposition.tex
+++ b/DSAA/presentation/img/matrix_decomposition.tex
@@ -4,10 +4,11 @@
 
 
 \node (y) [rectangle, fill=black!10, minimum height=2cm, minimum width=2cm] {$Y$};
-\node (eq) [right=0.1cm of y] {$\approx$};
+    \node (eq) [right=0.1cm of y] {$\sim h($};
 \node (p) [rectangle, fill=blue!40, minimum height=2cm, minimum width=1cm, right=0.1cm of eq] {$F$};
 \node (f) [rectangle, fill=green!40, minimum height=1cm, minimum width=1cm, yshift=0.5cm , right=0.3cm of p] {$\Phi$};
 \node (pt) [rectangle, fill=blue!40, minimum height=1cm, minimum width=2cm,  right=0.3cm of f] {$F^T$};
+    \node (close) [yshift=-0.5cm, right=0cm of pt] {)};
 
 \node[below of=y, yshift=-0.25cm] (Y) {$N \times N$};
 \node (F) [below of=p, yshift=-0.25cm] {$N \times K$};
