--- a/DSAA/presentation/presentation.tex
+++ b/DSAA/presentation/presentation.tex
@@ -16,8 +16,10 @@
 \usepackage{tikz}
 \usetikzlibrary{bayesnet} 
 \usepackage{bm}
+\usepackage{bbm}
 \usepackage{multirow}
 \usepackage{booktabs}
+\usepackage{subfigure}
 
 
 %%%%%%%%%%% Box 
