--- a/DSAA/presentation/slide.tex
+++ b/DSAA/presentation/slide.tex
@@ -90,7 +90,11 @@
 
     \vspace{2em}
 
-    \textit{\Large{Do those models comply with preferential attachment? homophily?  }}
+    \textit{\Large{Do those models comply with preferential attachment?}}\\
+    \vspace{1em}
+    \textit{\Large{homophily?}}\\
+    \vspace{1em}
+    \textit{\Large{What is the impact on predictions?}}
 
 
 \pause
@@ -249,7 +253,7 @@
             \end{itemize}
 
         \item[containing $N$ nodes]:  $|V| = N$
-        \item[Define a adjacency matrix]:  $Y=(y_{ij}) \quad i,j \in V^2, \left| \substack{\ y_{ij}=1 \quad \textrm{if} \quad (i,j) \in E \\ y_{ij}=0 \quad \textrm{otherwise} } \right.\kern-\nulldelimiterspace  $
+        \item[Define a adjacency matrix]:  $Y=(y_{ij})_{i,j \in V^2} \left| \substack{\ y_{ij}=1 \quad \textrm{if } (i,j) \in E \\ \ y_{ij}=0 \quad \textrm{otherwise} } \right.\kern-\nulldelimiterspace  $
     \end{description}
 
     \begin{columns}
@@ -273,86 +277,43 @@
 %
 
 
-\begin{frame}[t]{Unsupervised Learning}
-
-    % Latent variable and factorization matrix view.
-    \textit{\Large{Learn a  \emph{"good"} representation of the data in order to do: }}
-    \begin{itemize}
-        \item Links Prediction
-        \item Clustering and Visualization
-    \end{itemize}
-
-
-    \pause ~\\
-
-    \begin{description}[align]
-        \item[Approximate the adjacency matrix]:  $Y \approx F\Phi F^T$
-    \end{description}
-
-    \begin{columns}
-        \begin{column}{0.5\textwidth}
-            \input{img/matrix_decomposition}
-        \end{column}
-        \begin{column}{0.5\textwidth}
-        \begin{figure}[h]
-        \includegraphics[scale=0.15]{img/gdot.png}
-        \end{figure}
-        \end{column}
-    \end{columns}
-
-    
-
-    \begin{description}[align]
-        \item[A latent feature matrix]: $F \in \mathcal{F}^{N\times K}$ -- Local variable for each node
-        \item[A latent weights matrix]:  $\Phi \in \mathcal{P}^{K\times K}$ -- Global variable shared by all nodes
-    \end{description}
-    \emph{Assume $K$ the dimension of the model (dimension of latent variables)}
-
-    \begin{columns}
-        \begin{column}{0.5\textwidth}
-            \input{img/matrix_decomposition}
-        \end{column}
-        \begin{column}{0.5\textwidth}
-        \begin{figure}[h]
-        \includegraphics[scale=0.15]{img/gdot.png}
-        \end{figure}
-        \end{column}
-    \end{columns}
-\end{frame}
-
 
 
 \begin{frame}[t]{Random Graph model}
 
-Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$ such that:
+Given a Graph $G=(V,E)$, and $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$ such that:
 
 \begin{equation*}
-    Y \sim P(Y | \textcolor{blue}{F}, \textcolor{green}{\Phi}) = \textcolor{blue}{F}\textcolor{green}{\Phi} \textcolor{blue}{F}^T
+    Y \sim P(Y | \textcolor{blue}{F}, \textcolor{green}{\Phi}) =h( \textcolor{blue}{F}\textcolor{green}{\Phi} \textcolor{blue}{F}^T )
 \end{equation*}
 
 
 \begin{description}
 \setlength{\itemindent}{-2cm}
 \item[\textcolor{blue}{$F$}]: a latent feature matrix (describe the membership of nodes)
-\item[\textcolor{green}{$\Phi$}]: a latent weight matrix (describe the correlation between class)
+\item[\textcolor{green}{$\Phi$}]: a latent weight matrix (describe the correlation between classes)
+\item[$h$]: a mapping functions to a probability space.
 \end{description}
 
 \pause
 
 
     \begin{columns}
-        \begin{column}{0.5\textwidth}
-            \begin{block}{Likelihood}
-            \[ P(y_{ij}=1 | F, \Phi) = f_i \Phi f_j^T \]
-            \end{block}
-            What prior over $F$ and $\Phi$ ?
+        \begin{column}{0.6\textwidth}
+            \input{img/matrix_decomposition}
+
+    \begin{block}{Likelihood}
+    \[ P(y_{ij}=1 | F, \Phi) = f_i \Phi f_j^T \]
+    \end{block}
+    What prior over $F$ and $\Phi$ ?
         \end{column}
-        \begin{column}{0.5\textwidth}
+        \begin{column}{0.4\textwidth}
         \begin{figure}[h]
         \includegraphics[scale=0.15]{img/gdot.png}
         \end{figure}
         \end{column}
     \end{columns}
+
 
 \end{frame}
 
@@ -360,17 +321,17 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
 \newcounter{col}
 \newcommand\setrow{}
 
-\begin{frame}[t]{Random Graph Model (cont.)}
+\begin{frame}[t]{Stochastic Blockmodel}
     The Stochastic Blockmodel \footfullcite{goldenberg2010survey}
 
     \begin{itemize}
         \item We have $K$ blocks and,
         \item Any node $i$ belongs to one block $c$:
-        \item Each weights $\phi_{kl}$ , $k,l \in (0, .., K-1)^2$  encode the strength between two blocks.
+        \item Each weights $(\phi_{kl})_{k,l \in (1, .., K)^2}$ ,  encode the strength between two blocks.
     \end{itemize}
 
-    ~\\
-    \emph{Arbitrary Example:}
+    \vspace{1em}
+    \emph{One Example:}
 
     \begin{block}{Block membership for node 4 and 7 (K=3 and N=9)}
 
@@ -417,7 +378,7 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
     
 \end{frame}
 
-\begin{frame}[c]{Random Graph Model (cont.)}
+\begin{frame}[c]{IMMSB}
 
     Infinite Mixed Membership Stochastic Model (IMMSB) \footfullcite{IMMSB}
     \vspace{1cm}
@@ -444,7 +405,7 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}[c]{ILFM}
 
     Infinite Latent Feature Model (ILFM) \footfullcite{ILFRM}
     \vspace{1cm}
@@ -468,43 +429,79 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
 
 \section{Properties Characterization}
 
-\begin{frame}[c]{Preferential Attachment}
 
-    \[ \Delta_n P(d_i \geq n+1 | d_i \geq n) > 0 \]
+\begin{frame}[c]{Preferential attachment}
 
-    \begin{figure}[h]
-        \caption{power law distribution in empirical data}
-    \includegraphics[scale=0.25]{img/power_law.pdf}
-    \end{figure}
 
-    \footfullcite{clauset2009power}
+    \begin{definition}[Degrees]
+    Let $\mathcal{M}_e = \{ \textcolor{blue}{F}, \textcolor{green}{\Phi} \}$ be a probabilistic link prediction model such that 
+    \[Y\sim P(Y|\mathcal{M}_e) \]
+
+    Let $\mathcal{C}_k$ be the set of nodes belonging to the class $k$.
+
+    \begin{itemize}
+    \item Global degree : $d_i  = \sum_{j\neq i} y_{ij}$
+    \item Local degree :  $d_{ik}  = \sum_{j\neq i} y_{ij} \mathbbm{1}(i,j\in \mathcal{C}_k)$
+    \item Expected Local degree :  $D_{ik}  = \sum_{j\neq i} P(y_{ij}=1, i,j\in \mathcal{C}_k | \mathcal{M}_e) $
+    \end{itemize}
+    \end{definition}
+
+    %
+    % I don't like this assertin, still its incorecct, membership for ILFM are hard and
+    % Known given F. For MMSB, it can be says tough the membership are not direcly
+    % observed stil it's an expection over the Z.
+    %
+    %Note: In practice, class are not directly observed, thus we have to resort to the the expected local degree.
+
+
+
+    % Power law figure on real dataset...
+    %\begin{figure}[h]
+    %    \caption{power law distribution in real datasets}
+    %\includegraphics[width=7cm, height=5.1cm]{img/power_law.pdf}
+    %\end{figure}
+    %\footfullcite{clauset2009power}
+
 \end{frame}
 
-\begin{frame}[c]{Characterisation of Burstiness}
 
-    Three Levels.
+\begin{frame}[c]{Preferential attachment (cont.)}
+
+\emph{The rich get richer...}
+\vspace{2em}
+
+\begin{definition}[Global Preferential attachment]
+we say that $\mathcal{M}_e$ satisfies the global preferential attachment iff, for any node $i$, 
+\[P(d_i \ge n+1 \mid d_i \ge n, \mathcal{M}_e) \textrm{ increases with } n \in \{0,..., N-2\} \]
+\end{definition}
+
+\begin{definition}[Local Preferential attachment]
+we say that  $\mathcal{M}_e$ satisfies the local preferential attachment iff, for any node $i$, 
+\[P(D_{i,k} \ge x+\epsilon \mid D_{i,k} \ge x, \mathcal{M}_e) \textrm{ increases with } x \in [0,N[ \]
+\end{definition}
+
+\end{frame}
 
 
-    \begin{columns}[t]
-        \begin{column}{0.5\textwidth}
-            \begin{definition}{Global Preferential attachment}
-                \[ \Delta_n P(d_i \geq n+1 | d_i \geq n) > 0 \]
-            \end{definition}
-            \begin{definition}{Local Preferential attachment}
-                \[ \Delta_n P(d_{ic} \geq n+1 | d_{ic} \geq n) > 0 \]
-            \end{definition}
-            \begin{definition}{Feature Burstiness}
-                \[ \Delta_n P(\bm{f}_k \geq n+1 | \bm{f}_k \geq n) > 0 \]
-            \end{definition}
-        \end{column}
-        \begin{column}{0.5\textwidth}
+\begin{frame}[c]{Homophily}
 
-        \begin{figure}[h]
-        \includegraphics[scale=0.25]{img/gdot.png}
-        \end{figure}
+\emph{Birds of a feather flock together...}
+\vspace{2em}
 
-        \end{column}
-    \end{columns}
+\begin{definition}[Homophily]
+Let $s$ be a similarity measure between nodes. 
+We say that $\mathcal{M}_e$ is homophilic under the similarity $s$ iff, $\forall (i,j,i',j') \in V^4$:
+
+\[ s(i,j) > s(i',j')  \implies P(y_{ij}=1 \mid \mathcal{M}_e) > P(y_{i'j'}=1  \mid \mathcal{M}_e) \]
+
+\end{definition}
+
+\begin{block}{Similarities}
+    \begin{description}
+    \item[Natural similariry] : $s_n = f_i \Phi f_j\top $
+    \item[Latent similarity] \ : $s_l = f_i f_j^\top$
+    \end{description} 
+\end{block}
 
 \end{frame}
 
@@ -514,7 +511,7 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
 
 \begin{frame}[c]{Theoretical Results}
 
-    Summary of our theoretical results. \footfullcite{A study of stochastic mixed membership models for link prediction in social networks: Under Revision}
+    Summary of our theoretical results. %\footfullcite{A study of stochastic mixed membership models for link prediction in social networks: Under Revision}
     \vspace{1cm}
 
 
@@ -533,28 +530,69 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
 
 \end{frame}
 
-\begin{frame}[c]{Empirical Results (I)}
+\begin{frame}[c]{Empirical Results (Datasets)}
+
+    \vspace{-0.2cm}
+\begin{table}[h] 
+	\centering
+	\caption{Characteristics of artificial and real networks.}
+    \begin{tabular}{lrrr}
+        \hline
+        \textbf{Networks} &   nodes &   edges &   density \\
+        \hline
+        Network1 &    1000 &    3507 &     0.007 \\
+        Network2 &    1000 &   31000 &     0.062 \\
+        Blogs         &    1490 &   20512 &     0.009 \\
+        Manufacturing &     167 &    5950 &     0.215 \\
+    \hline
+    \end{tabular}
+	\label{table:networks_measures}
+\end{table}
+
+\begin{table}[t]
+\caption{Preferential attachment measures for training datasets and networks generated with fitted models.}
+\centering
+\begin{tabular}{lrrrr}
+  \multirow{2}{*}{\textbf{Training Datasets}}  &
+  \multicolumn{2}{c}{Global} & \multicolumn{2}{c}{Local}\\
+  \cmidrule(r){2-3} \cmidrule(l){4-5}
+  &   $p$-value &   $\alpha$   & $p$-value & $\alpha$   \\
+\hline
+Network1       & 1 & 2.4 &   1.0 $\pm$ 0.0  &  1.8 $\pm$ 0.03  \\
+Network2       & 0 & 1.3 &   0.0 $\pm$ 0.0  &  1.2 $\pm$ 0.01 \\
+Blogs          & 1 & 1.5 &   1.0 $\pm$ 0.0  &  1.4 $\pm$ 0.03\\
+Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
+\hline
+\end{tabular}
+\label{table:me_gofit}
+\end{table}
+
+\end{frame}
+
+\begin{frame}[c]{Empirical Results (Preferential attachment I)}
 
     \vspace{-0.2cm}
 
     \begin{columns}[t]
         \begin{column}{0.5\textwidth}
         \begin{figure}[h]
-            \caption{Synthetic Datasets.}
-        \includegraphics[scale=0.2]{img/burst_sint.pdf}
+            \caption{Synthetic Datasets}
+        %\includegraphics[scale=0.2]{img/burst_sint.pdf}
+        \includegraphics[scale=0.28]{img/Network3_0.pdf}
+        \includegraphics[scale=0.28]{img/Network1_0.pdf}
         \end{figure}
         \end{column}
         \begin{column}{0.5\textwidth}
         \begin{figure}[h]
-            \caption{Prediction Performance, AUC curves.}
-        \includegraphics[scale=0.25]{img/auc.pdf}
+            \caption{Prediction Performance}
+        \includegraphics[scale=0.27]{img/auc.pdf}
         \end{figure}
         \end{column}
     \end{columns}
 
 \end{frame}
 
-\begin{frame}[c]{Empirical Results (II)}
+\begin{frame}[c]{Empirical Results (Preferential attachment II)}
         \begin{figure}[h]
             \caption{Comparison performance of IMMSB and ILFM based on the size of the training set.}
         \includegraphics[scale=0.5]{img/testset_max_20_roc_evolution}
@@ -562,28 +600,20 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
 \end{frame}
 
 
-\section{Limitation and Future Work}
-
-\begin{frame}[c]{Limitation and future work}
-    Representation Theorem for exchangeable graph \footfullcite{orbanz2015bayesian}.
-
-    \begin{block}{Aldous-Hoover Theorem}
-        An array $(Y_{ij})_{{ij}\in \mathbb{N}}$ is jointly exchangeable if and only if :
-    \begin{equation}
-        Y_{ij} \sim F(U_i, U_j, U_{ij})
-    \end{equation}
-
-    \begin{itemize}
-        \item With $F: [0,1]^3 \rightarrow [0,1]$ a random measure, 
-        \item  $(U_i)_{i\in \mathbb{N}}$ and $(U_{{ij}\in \mathbb{N}})$   i.i.d Uniform[0,1] random variables.
-    \end{itemize}
-    \end{block}
-
-    A corollary of this theorem is that random exchangeable graph are either \textbf{empty or dense}.
-    \vspace{1cm}
-
-    \MVRightarrow{} What network structure and invariance to comply with the Global preferential attachment ?
-
+\begin{frame}[c]{Empirical Results (Homophily)}
+    \begin{figure}[ht]
+    \caption{Natural and latent similarities aggregated over all datasets and computed on linked and non-linked pairs of nodes for IMMSB (top) and ILFM (bottom).}
+    \centering
+        \begin{subfigure}
+             \centering
+                 \includegraphics[width=0.4\textwidth]{img/homo_mustach_immsb}
+        \end{subfigure}
+        \begin{subfigure}
+                 \centering
+              \includegraphics[width=0.4\textwidth]{img/homo_mustach_ilfm}
+        \end{subfigure}
+        \label{fig:homo_mustach}
+    \end{figure}
 \end{frame}
 
 
@@ -616,6 +646,30 @@ Given a Graph $G=(V,E)$, find $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}
 %
 %
 %
+%
+
+\begin{frame}[c]{Limitation and future work}
+    Representation Theorem for exchangeable graph \footfullcite{orbanz2015bayesian}.
+
+    \begin{block}{Aldous-Hoover Theorem}
+        An array $(Y_{ij})_{{ij}\in \mathbb{N}}$ is jointly exchangeable if and only if :
+    \begin{equation}
+        Y_{ij} \sim F(U_i, U_j, U_{ij})
+    \end{equation}
+
+    \begin{itemize}
+        \item With $F: [0,1]^3 \rightarrow [0,1]$ a random measure, 
+        \item  $(U_i)_{i\in \mathbb{N}}$ and $(U_{{ij}\in \mathbb{N}})$   i.i.d Uniform[0,1] random variables.
+    \end{itemize}
+    \end{block}
+
+    A corollary of this theorem is that random exchangeable graph are either \textbf{empty or dense}.
+    \vspace{1cm}
+
+    \MVRightarrow{} What network structure and invariance to comply with the Global preferential attachment ?
+
+\end{frame}
+
 
 \begin{frame}[c]{Characterisation of Burstiness (cont .)}
 
