--- a/DSAA/presentation/slide.tex
+++ b/DSAA/presentation/slide.tex
@@ -292,7 +292,7 @@ Given a Graph $G=(V,E)$, and $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$
 \setlength{\itemindent}{-2cm}
 \item[\textcolor{blue}{$F$}]: a latent feature matrix (describe the membership of nodes)
 \item[\textcolor{green}{$\Phi$}]: a latent weight matrix (describe the correlation between classes)
-\item[$h$]: a mapping functions to a probability space.
+\item[$h$]: a mapping function to a probability space.
 \end{description}
 
 \pause
@@ -602,7 +602,7 @@ Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
 
 \begin{frame}[c]{Empirical Results (Homophily)}
     \begin{figure}[ht]
-    \caption{Natural and latent similarities aggregated over all datasets and computed on linked and non-linked pairs of nodes for IMMSB (top) and ILFM (bottom).}
+    \caption{Natural and latent similarities aggregated over all datasets and computed on linked and non-linked pairs of nodes for IMMSB (left) and ILFM (right).}
     \centering
         \begin{subfigure}
              \centering
@@ -630,11 +630,13 @@ Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
     \begin{itemize}
         \item Extend to weighted networks (and scalable inference).
         \item Extend to temporal networks. 
+        \item Reproducible research/experiments : \hyperlink{http://github.com/dtrckk/pymake}{http://github.com/dtrckd/pymake}
+
     \end{itemize}
     \end{block}
-\end{frame}
 
-\begin{frame}[c]{Bottom}
+    \pause
+    \vspace{1em}
     \textcolor{green}{Thank You}
 \end{frame}
 
