--- a/DSAA/presentation/slide.tex
+++ b/DSAA/presentation/slide.tex
@@ -102,13 +102,13 @@
 \begin{block}{Claims}
 \begin{tabular}{l|cc|c}
 
-    \multicolumn{3}{c}{\hspace{1.3cm}Preferential Attachment}   \\
-    \cmidrule(l){2-3} 
-    &   global & local  &   homophily      \\
-    \hline
-    ILFM       & \cellcolor{red!25}No & \cellcolor{red!25}No   & depends on similarity  \\
-    IMMSB       & \cellcolor{red!25}No & \cellcolor{green!25}Yes  & depends on similarity \\
-\end{tabular}
+        \multicolumn{3}{c}{\hspace{1.3cm}\textbf{Preferential Attachment}}   \\
+        \cmidrule(l){2-3} 
+        &   global & local  &   \textbf{homophily}      \\
+        \hline
+        ILFM       & \cellcolor{red!25}No & \cellcolor{red!25}No   & depends on similarity  \\
+        IMMSB       & \cellcolor{red!25}No & \cellcolor{green!25}Yes  & depends on similarity \\
+    \end{tabular}
 \end{block}
 
 \end{frame}
@@ -488,14 +488,14 @@ we say that  $\mathcal{M}_e$ satisfies the local preferential attachment iff, fo
 \begin{block}{Proposition (Global preferential attachment)}
 Both IMMSB and ILFM  do not satisfy global preferential attachment.
 \end{block}
-%Clue =$>$ Exchangeability
+Clue =$>$ Exchangeability
 
 \vspace{1em}
 
 \begin{block}{Proposition (Local preferential attachment)}
 IMMSB satisfies local preferential attachment whereas ILFM does not.
 \end{block}
-%Clue =$>$ Conjugacy
+Clue =$>$ Conjugacy
 
 \end{frame}
 
@@ -549,9 +549,9 @@ Neither IMMSB nor ILFM are homophilic with respect to the latent similarity $s_l
     \begin{block}{Theoretical results}
 	\begin{tabular}{l|cc|c}
 
-        \multicolumn{3}{c}{\hspace{1.3cm}Preferential Attachment}   \\
+        \multicolumn{3}{c}{\hspace{1.3cm}\textbf{Preferential Attachment}}   \\
         \cmidrule(l){2-3} 
-        &   global & local  &   homophily      \\
+        &   global & local  &   \textbf{homophily}      \\
         \hline
         ILFM       & \cellcolor{red!25}No & \cellcolor{red!25}No   & depends on similarity  \\
         IMMSB       & \cellcolor{red!25}No & \cellcolor{green!25}Yes  & depends on similarity \\
