--- a/Marami/presentation/slide.tex
+++ b/Marami/presentation/slide.tex
@@ -303,7 +303,7 @@ Given a Graph $G=(V,E)$,  $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$ su
             \input{img/matrix_decomposition}
 
     \begin{block}{Likelihood}
-    \[ P(y_{ij}=1 | F, \Phi) = f_i \Phi f_j^T \]
+    \[ P(y_{ij}=1 | F, \Phi) = h(f_i \Phi f_j^T) \]
     \end{block}
     What prior over $F$ and $\Phi$ ?
         \end{column}
