--- a/DSAA/presentation/slide.tex
+++ b/DSAA/presentation/slide.tex
@@ -1,7 +1,7 @@
 \title{A study of stochastic mixed membership models for link prediction in social networks}
 \subtitle{---\\}
 \author[Dulac Adrien]{Dulac Adrien\\[3mm] Christine Largeron -- Eric Gaussier}
-\date{Juillet 2017}
+\date{Octobre 2017}
 \institute{LIG / AMA}
 
 \usepackage[backend=bibtex]{biblatex}
@@ -281,7 +281,7 @@
 
 \begin{frame}[t]{Random Graph model}
 
-Given a Graph $G=(V,E)$,  $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$ such that:
+Given a Graph $G=(V,E)$,  we define $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$ such that:
 
 \begin{equation*}
     Y \sim P(Y | \textcolor{blue}{F}, \textcolor{green}{\Phi}) =h( \textcolor{blue}{F}\textcolor{green}{\Phi} \textcolor{blue}{F}^T )
@@ -326,7 +326,7 @@ Given a Graph $G=(V,E)$,  $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$ su
 
     \begin{itemize}
         \item We have $K$ blocks
-        \item Any node $i$ belongs to one block $c$
+        \item Any node $i$ belongs to only one block $c$
         \item Each weight $(\phi_{kl})_{k,l \in (1, .., K)^2}$ ,  encodes the strength between two blocks.
     \end{itemize}
 
@@ -437,7 +437,8 @@ Given a Graph $G=(V,E)$,  $\textcolor{blue}{F}$ and $\textcolor{green}{\Phi}$ su
     Let $\mathcal{M}_e = \{ \textcolor{blue}{F}, \textcolor{green}{\Phi} \}$ be a probabilistic link prediction model such that 
     \[Y\sim P(Y|\mathcal{M}_e) \]
 
-    Let $\mathcal{C}_k$ be the set of nodes belonging to the class $k$.
+    Let $\mathcal{C}_k$ be the set of nodes belonging to the class $k$ such that
+    \[\mathcal{C}_k\sim P(\mathcal{C}_k|\mathcal{M}_e) \]
 
     \begin{itemize}
     \item Global degree : $d_i  = \sum_{j\neq i} y_{ij}$
@@ -483,19 +484,19 @@ we say that  $\mathcal{M}_e$ satisfies the local preferential attachment iff, fo
 
 \end{frame}
 
-\begin{frame}
+\begin{frame}[c]{Preferential attachment (cont.)}
 
 \begin{block}{Proposition (Global preferential attachment)}
 Both IMMSB and ILFM  do not satisfy global preferential attachment.
 \end{block}
-Clue =$>$ Exchangeability
+Clue =$>$ \underline{Exchangeability}
 
 \vspace{1em}
 
 \begin{block}{Proposition (Local preferential attachment)}
 IMMSB satisfies local preferential attachment whereas ILFM does not.
 \end{block}
-Clue =$>$ Conjugacy
+Clue =$>$ \underline{Conjugacy}
 
 \end{frame}
 
@@ -538,7 +539,7 @@ Neither IMMSB nor ILFM are homophilic with respect to the latent similarity $s_l
 
 
 
-\section{Results and Illustrations}
+\section{Illustrations}
 
 \begin{frame}[c]{Theoretical Results}
 
@@ -600,22 +601,6 @@ Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
 
 \end{frame}
 
-\begin{frame}[c]{Empirical Results (Homophily)}
-    \begin{figure}[ht]
-    \caption{Natural and latent similarities aggregated over all datasets and computed on linked and non-linked pairs of nodes for IMMSB (left) and ILFM (right).}
-    \centering
-        \begin{subfigure}
-             \centering
-                 \includegraphics[width=0.4\textwidth]{img/homo_mustach_immsb}
-        \end{subfigure}
-        \begin{subfigure}
-                 \centering
-              \includegraphics[width=0.4\textwidth]{img/homo_mustach_ilfm}
-        \end{subfigure}
-        \label{fig:homo_mustach}
-    \end{figure}
-\end{frame}
-
 
 \begin{frame}[c]{Empirical Results (Preferential attachment I)}
 
@@ -648,24 +633,44 @@ Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
 \end{frame}
 
 
+\begin{frame}[c]{Empirical Results (Homophily)}
+    \begin{figure}[ht]
+    \caption{Natural and latent similarities aggregated over all datasets and computed on linked and non-linked pairs of nodes for IMMSB (left) and ILFM (right).}
+    \centering
+        \begin{subfigure}
+             \centering
+                 \includegraphics[width=0.4\textwidth]{img/homo_mustach_immsb}
+        \end{subfigure}
+        \begin{subfigure}
+                 \centering
+              \includegraphics[width=0.4\textwidth]{img/homo_mustach_ilfm}
+        \end{subfigure}
+        \label{fig:homo_mustach}
+    \end{figure}
+\end{frame}
+
 
 \begin{frame}[c]{Conclusion}
     \begin{block}{Wrap up}
     \begin{itemize}
         \item Formal definitions of social networks properties [Homophily and Preferential Attachments].
-        \item Study of compliance of Mixed Membership Models with the properties.
+        \item Study of compliance of IMMSB/ILFM with the properties.
         \item Empirical implication on prediction performances.
     \end{itemize}
     \end{block}
 
-    \begin{block}{Future work}
-    \begin{itemize}
-        \item Extend to weighted networks (and scalable inference).
-        \item Extend to temporal networks. 
-        \item Reproducible research/experiments : \hyperlink{http://github.com/dtrckk/pymake}{http://github.com/dtrckd/pymake}
 
-    \end{itemize}
-    \end{block}
+    %\begin{block}{Future work}
+    %\begin{itemize}
+    %    \item Extend to weighted networks (and scalable inference).
+    %    \item Extend to temporal networks. 
+    %    \item Reproducible research/experiments : \hyperlink{http://github.com/dtrckk/pymake}{http://github.com/dtrckd/pymake}
+
+    %\end{itemize}
+    %\end{block}
+    
+    \vspace{2em}
+     Reproducible research/experiments : \hyperlink{http://github.com/dtrckk/pymake}{github.com/dtrckd/pymake}
 
     \pause
     \vspace{1em}
