--- a/DSAA/presentation/slide.tex
+++ b/DSAA/presentation/slide.tex
@@ -654,23 +654,21 @@ Manufacturing  & 0 & 1.4 &   0.4 $\pm$ 0.3  &  1.3 $\pm$ 0.05 \\
     \begin{block}{Wrap up}
     \begin{itemize}
         \item Formal definitions of social networks properties [Homophily and Preferential Attachments].
-        \item Study of compliance of IMMSB/ILFM with the properties.
+        \item Study of compliance of IMMSB/ILFM with those properties.
         \item Empirical implication on prediction performances.
     \end{itemize}
     \end{block}
 
 
-    %\begin{block}{Future work}
-    %\begin{itemize}
-    %    \item Extend to weighted networks (and scalable inference).
-    %    \item Extend to temporal networks. 
-    %    \item Reproducible research/experiments : \hyperlink{http://github.com/dtrckk/pymake}{http://github.com/dtrckd/pymake}
+    \begin{block}{Future work}
+    \begin{itemize}
+        \item Extend to weighted networks (and scalable inference).
+        \item Extend to temporal networks. 
+        \item Reproducible research/experiments : \hyperlink{http://github.com/dtrckk/pymake}{http://github.com/dtrckd/pymake}
 
-    %\end{itemize}
-    %\end{block}
+    \end{itemize}
+    \end{block}
     
-    \vspace{2em}
-     Reproducible research/experiments : \hyperlink{http://github.com/dtrckk/pymake}{github.com/dtrckd/pymake}
 
     \pause
     \vspace{1em}
