--- a/JASA/journal_version.tex
+++ b/JASA/journal_version.tex
@@ -45,6 +45,7 @@
 %%%%%%%%%% Math
 \renewcommand{\text}{\textnormal}
 \newcommand{\ifm}{\texttt{ILFM}}
+\newcommand{\ilfm}{\texttt{ILFM}}
 \newcommand{\imb}{\texttt{IMMSB}}
 \newcommand{\pr}{P}
 \newcommand{\p}{P}
@@ -117,8 +118,9 @@ We assess here whether standard stochastic mixed membership models are adapted f
 
 \input{content/intro}
 \input{content/models}
-\input{content/inference_context}
+\input{content/inference_context_v2}
 \input{content/preferential_v2}
+\input{content/illustration_v2}
 \input{content/concl}
 
 ~\\
@@ -127,7 +129,8 @@ We assess here whether standard stochastic mixed membership models are adapted f
 \bibliographystyle{chicago}
 \bibliography{./a}
 
-\appendix
-\input{appendix}
+%\appendix
+%\input{appendix}
 
 \end{document}
+
